Fix crash on deleting the only file in view

BUG: 485738